tests/baselines/reference/parserForStatement2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/Statements/parserForStatement2.ts (1 errors) ====
    var a;
    var b = [];
    var c;
    for (a in b[c] = b[c] || [], d) {
                                 ~
!!! error TS2304: Cannot find name 'd'.
    
    }